// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component functionality test  matches snapshot 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(WarningIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action alert-button"
        fullWidth={true}
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon based on type "done" 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(DoneIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action alert-button"
        fullWidth={true}
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon based on type "error_outline" 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(ErrorOutlineIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action alert-button"
        fullWidth={true}
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon based on type "help" 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(HelpIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action alert-button"
        fullWidth={true}
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon based on type "help_outline" 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(HelpOutlineIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action alert-button"
        fullWidth={true}
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon based on type "info" 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(InfoIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action alert-button"
        fullWidth={true}
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon based on type "info_outline" 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(InfoOutlinedIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action alert-button"
        fullWidth={true}
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon for default 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(ErrorIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action alert-button"
        fullWidth={true}
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;
